--- a/Basic Begineer Projects/book library/index.html
+++ b/Basic Begineer Projects/book library/index.html
@@ -15,6 +15,10 @@
             <div class='title'>
                 <h1>Library</h1>
             </div>
+
+            <div class='date__time'>
+                
+            </div>
         </nav>
 
         <!-- This div contains random quotes generated from app.js-->
